--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "TrashTrackWeb",
-  "version": "1.0.0",
-  "description": "![banner](assets/Banner/Banner.png)",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/buitim/TrashTrackWeb.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/buitim/TrashTrackWeb/issues"
-  },
-  "homepage": "https://github.com/buitim/TrashTrackWeb#readme",
-  "dependencies": {
-    "express": "^4.16.4",
-    "pug": "^2.0.3"
-  }
+	"name": "TrashTrackWeb",
+	"version": "1.0.0",
+	"description": "![banner](assets/Banner/Banner.png)",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/buitim/TrashTrackWeb.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/buitim/TrashTrackWeb/issues"
+	},
+	"homepage": "https://github.com/buitim/TrashTrackWeb#readme",
+	"dependencies": {
+		"express": "^4.16.4",
+		"pug": "^2.0.3"
+	}
 }
