--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/buitim/TrashTrackWeb#readme",
 	"dependencies": {
+		"ejs": "^2.6.1",
 		"express": "^4.16.4",
 		"pg": "^7.6.1",
 		"pug": "^2.0.3"
