--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
 	},
 	"homepage": "https://github.com/buitim/TrashTrackWeb#readme",
 	"dependencies": {
-		"ejs": "^2.6.1",
 		"express": "^4.16.4",
+		"express-handlebars": "^3.0.0",
+		"handlebars": "^4.0.12",
 		"pg": "^7.6.1",
 		"pug": "^2.0.3"
 	}
